conversion to Java 25 FFM starting from v4.x